Fix : padding on Newsletter for readability

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -153,6 +153,7 @@ pre {
 #mc_embed_signup {
     padding: 22px;
     background-color: #fff;
+    padding: 2em 22px 2em 22px;
 }
 
 #mc_embed_signup_scroll {
